--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
 
 body {
+  margin: 0;
+  padding: 0;
   background-color: #fff8e1;
   color: #424242;
-  font-family: "Poppins";
+  font-family: "Poppins", "Raleway", "Source Code Pro", sans-serif;
   font-weight: 400;
 }
 
