--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.5em;
   padding-bottom: 3.4em;
 }
 
@@ -14,30 +13,20 @@
   text-align: center;
   padding-top: 1.25em;
   padding-left: 1.25em;
-  padding-bottom: 2.25em;
+  padding-bottom: 2.5em;
   position: absolute;
   left: 0;
-  bottom: 10px;
+  bottom: 20px;
   background: #29b6f6;
   color: #fff;
-  height: 2.5em;
+  height: 1.5em;
   width: 100%;
   transition: all 80ms;
   font-weight: 600;
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
 
   opacity: 0;
-}
-
-.Zcard .title {
-  position: absolute;
-  left: 0.625em;
-  bottom: 1.875em;
-}
-
-.Zcard .price {
-  position: absolute;
-  left: 0.625em;
-  bottom: 0.625em;
 }
 
 .Zcard:hover::after {
@@ -59,58 +48,4 @@
   height: 100%;
   display: grid;
   place-items: center;
-}
-.tooltip {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-
-.tooltip button {
-  background-color: #29b6f6;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s ease-out;
-}
-
-.tooltip button:hover {
-  background-color: #b92929;
-  transform: scale(1.05);
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
-.tooltiptext {
-  visibility: hidden;
-  width: 160px;
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  border-radius: 8px;
-  padding: 5px;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -80px;
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-.tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #333 transparent transparent transparent;
 }
